--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Starter project</title>
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Quicksand|Roboto"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="app"></div>
 
     <script src="/js/main.js"></script>
-    <script>starter.core.init();</script>
+    <script>
+      starter.core.init();
+    </script>
   </body>
 </html>
